# fastapi-auth-template-ddd

./: README.md
backend/: pyproject.toml
backend/app/: main.py
